--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-client": "^2.0.4",
     "apollo-client-preset": "^1.0.5",
+    "bootstrap": "^4.0.0-alpha.6",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "react": "^16.2.0",
