--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open 'Google Chrome' --config ./config/webpack/webpack.dev.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test mocha-webpack --exit --opts test/mocha-webpack.opts"
   },
   "author": "joepuzzo",
   "license": "ISC",
@@ -28,15 +28,22 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^11.5.1",
+    "mocha": "^4.1.0",
+    "mocha-webpack": "^1.0.1",
     "node-sass": "^4.7.2",
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
+    "sinon": "^4.1.4",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.9.7",
+    "webpack-node-externals": "^1.6.0"
   }
 }
